Fixed get first in alc and non alc drink manager