@@ -112,7 +112,7 @@ public class AlcDrinkScreenManager implements Initializable {
      */
     private void showIngredients(Button button){
         if(!(ingredientNames.isEmpty())){
-            String temp = ingredientNames.getFirst();
+            String temp = ingredientNames.get(0);
             button.setText(temp);
             ingredientNames.remove(temp);
 
